# bacon-net

./: .gitignore  MANIFEST.in  README.md  alternating_tree_viz.html  assembler.pth  bacon-distill.py  bacon1.py  best_bacon_mnist_addition.pt  best_bacon_mnist_addition_multiclass.pt  call-mary-early-stop.py  call-mary-multi-layer.py  call-mary.py  example_peak_transformation.py  full_tree_viz.html  main.py  main10.py  main11.py  main12-5vars.py  main12-6med.py  main12-6vars.py  main12.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  new1.py  new10.py  new11.py  new12.py  new13.py  new14.py  new15.py  new16.py  new2.py  new3.py  new4.py  (+18 more)
.github/workflows/: tests.yml
.tmp/: feynman_first10_alternating.json  feynman_full_alternating.json  feynman_shortlist_pysr_tuned.json  feynman_triage_shortlist.md
backup/: MANIFEST.in  README.md  setup.py
bacon/: __init__.py  __main__.py  alternatingTree.py  baconNet.py  binaryTreeLogicNet.py  binaryTreeLogicNet.py-exp  cli.py  distill.py  frozonInputToLeaf.py  fullyConnectedTree.py  hierarchicalBaconNet.py  inputToCombinationSinkhorn.py  inputToLeafSinkhorn.py  net.py  policies.py  stack.py  transformationLayer.py  utils.py  vectorLogicNet.py  visualization.py
bacon/aggregators/: base.py
bacon/demos/: __init__.py  hello_world.py
bacon/nets/: linear.py  lsp3.py  poly2.py
bacon/tools/: __init__.py  demo.py  distill.py  expression.py  viz.py
baseline/: dnn-5features.py  dnn.py  svm.py
benchmarks/1000-variable-bool/: README.md  analyze_shortcircuit.py  bacon-fixed.py  bacon.py  balanced_tree_data.py  decision_tree.py  ripper.py  symbolic_regression.py
benchmarks/ablation/: README.md  sparsity_ablation_results_20251214_173555.json  sparsity_ablation_results_20251215_051017.json  sparsity_ablation_results_20251215_120027.json  sparsity_ablation_results_20251215_120932.json  sparsity_ablation_results_20251215_125829.json  sparsity_ablation_results_20251215_132857.json  sparsity_ablation_results_20251215_201227.json  test_nan_minimal.py  test_sparsity_hardening.py
benchmarks/mnist-addition-v2/: README.md  backbone.py  config.py  data.py  digit_utils.py  train_addition_reasoner.py  train_digit_classifier.py
benchmarks/mnist-addition-v3/: README.md  backbone.py  datasets.py  mnist_addition_v3_deepproblog_best.pt  train_addition.py
benchmarks/mnist-addition-v4/: backbone.py  bacon_model_v4.py  best_bacon_mnist_addition_multiclass_v4.pt  best_bacon_mnist_addition_v4.pt  datasets.py  train_addition.py  train_addition_v4.py
docs/: .buildinfo  .buildinfo.bak  bacon.html  define-bacon-net.md  distillation-modes.md  distillation-quickstart.md  distillation.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  understanding-pruning-accuracy-drop.md
docs-site/: bacon.html  index.html  objects.inv  search.html
lab/: aggregator-anchors.py  conditional-aggregator.py  partial-absorption-adjustable-weights.py  partial-absorption-fixed-weights.py  partial-absorption.py  plot-scalability.py  plot_gcd2.py  plot_gcd2_animated.py  plot_softmax_agg_animated.py  softmax-int-plot-2.py  softmax-int-plot-3.py  softmax-int-plot.py  value-depedent-aggregator.py
llm/: sample-prompt.md
misc/: plot-prune.py
samples/: common.py
src/: __init__.py  bacon.py  baconnet.py  hello.py  stack.py
tests/: conftest.py  test_bacon.py  test_baconnet.py
(+543 files in other folders)
